v1.0.0.4 update